# Llamalama_II

./: .gitignore  README.md  chat_text.py  codes_0.npy  genimg_api.py  local_rag.ipynb  main.py  ngrok.yaml  pyproject.toml  pyvenv.cfg  requirements.txt  runall.py  stream.py  stream2.py  stream3.py  stream4.py  stream5.py  test.txt  test_tts.py  voice.py  vtuberstudio.py
checkpoints/fish-speech-1.2/: README.md
modules/fish_speech/fish_speech/models/text2semantic/: llama.py
modules/fish_speech/tools/llama/: generate.py
modules/fish_speech/tools/vqgan/: inference.py
outputs/: fake0.npy  fake3.npy  fake5.npy
sounds/profile/Lyra/revive/: revive1.txt  revive2.txt  revive3.txt
